[gd_scene load_steps=33 format=2]

[ext_resource path="res://Scripts/Root.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Step1Manager.gd" type="Script" id=2]
[ext_resource path="res://Assets/SimpleBlackSquare.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Step1BG.gd" type="Script" id=4]
[ext_resource path="res://Assets/Fonts/ConsoleFont1.tres" type="DynamicFont" id=5]
[ext_resource path="res://Scripts/Step1TextEdit.gd" type="Script" id=6]
[ext_resource path="res://Scripts/Step2Manager.gd" type="Script" id=7]
[ext_resource path="res://Assets/SimpleGreenSquare.png" type="Texture" id=8]
[ext_resource path="res://Scripts/Step2BG.gd" type="Script" id=9]
[ext_resource path="res://Assets/Fonts/JeffLabelFontStep2.tres" type="DynamicFont" id=10]
[ext_resource path="res://Assets/Fonts/NetworkWaitFonttStep2.tres" type="DynamicFont" id=11]
[ext_resource path="res://Scripts/Step2NetWaitLabel.gd" type="Script" id=12]
[ext_resource path="res://Scripts/Step3Manager.gd" type="Script" id=13]
[ext_resource path="res://Scripts/Step3CorruptionManagerTimer.gd" type="Script" id=14]
[ext_resource path="res://Assets/JeffScreenPreCorrupt.png" type="Texture" id=15]
[ext_resource path="res://Scripts/Step3CorruptionScreen.gd" type="Script" id=16]
[ext_resource path="res://Scripts/Step4Manager.gd" type="Script" id=17]
[ext_resource path="res://Assets/Fonts/Step4Password.tres" type="DynamicFont" id=18]
[ext_resource path="res://Assets/NormalJeffTextEditTheme.tres" type="Theme" id=19]
[ext_resource path="res://Scripts/Step4TextEdit.gd" type="Script" id=20]
[ext_resource path="res://Scripts/Step5Manager.gd" type="Script" id=21]
[ext_resource path="res://Scripts/Step5TextEdit.gd" type="Script" id=22]

[sub_resource type="Animation" id=1]

resource_name = "Fade"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationPlayer/Background:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="StyleBoxTexture" id=2]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
texture = ExtResource( 3 )
normal_map = ExtResource( 3 )
region_rect = Rect2( 0, 0, 16, 16 )
margin_left = 0.0
margin_right = 0.0
margin_top = 0.0
margin_bottom = 0.0
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
modulate_color = Color( 1, 1, 1, 1 )
draw_center = true

[sub_resource type="Theme" id=3]

default_font = ExtResource( 5 )
TextEdit/colors/background_color = Color( 0, 0, 0, 0 )
TextEdit/colors/brace_mismatch_color = Color( 1, 0.2, 0.2, 1 )
TextEdit/colors/breakpoint_color = Color( 0.8, 0.8, 0.4, 0.2 )
TextEdit/colors/caret_background_color = Color( 1, 1, 1, 1 )
TextEdit/colors/caret_color = Color( 0.878431, 0.878431, 0.878431, 1 )
TextEdit/colors/code_folding_color = Color( 0.8, 0.8, 0.8, 0.8 )
TextEdit/colors/completion_background_color = Color( 0, 0, 0, 1 )
TextEdit/colors/completion_existing_color = Color( 0.87451, 0.87451, 0.87451, 0.129412 )
TextEdit/colors/completion_font_color = Color( 0.666667, 0.666667, 0.666667, 1 )
TextEdit/colors/completion_scroll_color = Color( 1, 1, 1, 1 )
TextEdit/colors/completion_selected_color = Color( 0.262745, 0.258824, 0.266667, 1 )
TextEdit/colors/current_line_color = Color( 0.25, 0.25, 0.26, 0.8 )
TextEdit/colors/font_color = Color( 1, 1, 1, 1 )
TextEdit/colors/font_color_selected = Color( 1, 1, 1, 1 )
TextEdit/colors/function_color = Color( 0.4, 0.635294, 0.807843, 1 )
TextEdit/colors/line_number_color = Color( 0.666667, 0.666667, 0.666667, 0.4 )
TextEdit/colors/mark_color = Color( 1, 0.4, 0.4, 0.4 )
TextEdit/colors/member_variable_color = Color( 0.901961, 0.305882, 0.34902, 1 )
TextEdit/colors/number_color = Color( 0.921569, 0.584314, 0.196078, 1 )
TextEdit/colors/selection_color = Color( 0, 0, 0, 1 )
TextEdit/colors/symbol_color = Color( 0.941176, 0.941176, 0.941176, 1 )
TextEdit/colors/word_highlighted_color = Color( 0.8, 0.9, 0.9, 0.15 )
TextEdit/constants/completion_lines = 7
TextEdit/constants/completion_max_width = 50
TextEdit/constants/completion_scroll_width = 3
TextEdit/constants/line_spacing = 4
TextEdit/fonts/font = null
TextEdit/icons/tab = null
TextEdit/styles/completion = null
TextEdit/styles/focus = null
TextEdit/styles/normal = SubResource( 2 )
TextEdit/styles/read_only = null
_sections_unfolded = [ "TextEdit", "TextEdit/colors", "TextEdit/fonts", "TextEdit/styles" ]

[sub_resource type="SpriteFrames" id=4]

animations = [ {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=5]

resource_name = "Fade In"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationPlayer/J_E_F_F:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 223, 0 ), Vector2( 223, -30 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationPlayer/J_E_F_F:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="StyleBoxTexture" id=6]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 16, 16 )
margin_left = 0.0
margin_right = 0.0
margin_top = 0.0
margin_bottom = 0.0
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
modulate_color = Color( 1, 1, 1, 1 )
draw_center = true

[sub_resource type="Theme" id=7]

default_font = ExtResource( 11 )
RichTextLabel/colors/default_color = Color( 0.988312, 0.996094, 0, 1 )
RichTextLabel/colors/font_color_selected = Color( 0.490196, 0.490196, 0.490196, 1 )
RichTextLabel/colors/selection_color = Color( 0.1, 0.1, 1, 0.8 )
RichTextLabel/constants/line_separation = 1
RichTextLabel/constants/table_hseparation = 3
RichTextLabel/constants/table_vseparation = 3
RichTextLabel/fonts/bold_font = null
RichTextLabel/fonts/bold_italics_font = null
RichTextLabel/fonts/italics_font = null
RichTextLabel/fonts/mono_font = null
RichTextLabel/fonts/normal_font = null
RichTextLabel/styles/focus = null
RichTextLabel/styles/normal = SubResource( 6 )
_sections_unfolded = [ "Resource", "RichTextLabel", "RichTextLabel/colors", "RichTextLabel/styles" ]

[sub_resource type="Animation" id=8]

resource_name = "Fade"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("BackgroundAnimPlayer/Background:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=9]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("JeffTitlePlayer/J_E_F_F:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 223, 0 ), Vector2( 223, -30 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("JeffTitlePlayer/J_E_F_F:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=10]

resource_name = "Fade"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("LoginBoxAPlayer/LoginBox:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 350.277, 290.881 ), Vector2( 350.277, 240.881 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LoginBoxAPlayer/LoginBox:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Root" type="Node" index="0"]

script = ExtResource( 1 )

[node name="Step1" type="Node2D" parent="." index="0"]

editor/display_folded = true
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Step1" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Fade = SubResource( 1 )
blend_times = [  ]

[node name="Background" type="Sprite" parent="Step1/AnimationPlayer" index="0"]

position = Vector2( 510.296, 387.042 )
z_index = -1
texture = ExtResource( 3 )
script = ExtResource( 4 )
_sections_unfolded = [ "Animation", "Material", "Offset", "Region", "Transform", "Visibility", "Z Index" ]

[node name="TextEdit" type="TextEdit" parent="Step1" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.08
anchor_bottom = 0.0
margin_left = 236.0
margin_top = 247.0
margin_right = 903.88
margin_bottom = 514.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = SubResource( 3 )
text = "Awaiting input 
"
readonly = false
highlight_current_line = false
syntax_highlighting = false
show_line_numbers = false
highlight_all_occurrences = false
override_selected_font_color = false
context_menu_enabled = false
smooth_scrolling = false
v_scroll_speed = 80.0
hiding_enabled = 0
wrap_lines = false
caret_block_mode = true
caret_blink = true
caret_blink_speed = 0.65
caret_moving_by_right_click = true
script = ExtResource( 6 )
_sections_unfolded = [ "Theme" ]

[node name="Timer5" type="Timer" parent="Step1/TextEdit" index="6"]

process_mode = 1
wait_time = 0.1
one_shot = false
autostart = true

[node name="Step2" type="Node2D" parent="." index="1"]

editor/display_folded = true
visible = false
script = ExtResource( 7 )

[node name="Background" type="AnimatedSprite" parent="Step2" index="0"]

z_index = -2
frames = SubResource( 4 )
animation = "default"
script = ExtResource( 9 )
_sections_unfolded = [ "Visibility", "Z Index" ]

[node name="Step2J_E_F_FlTimer" type="Timer" parent="Step2" index="1"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="Step2/Step2J_E_F_FlTimer" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
"anims/Fade In" = SubResource( 5 )
blend_times = [  ]
_sections_unfolded = [ "Playback Options" ]

[node name="J_E_F_F" type="Label" parent="Step2/Step2J_E_F_FlTimer/AnimationPlayer" index="0"]

modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 223.0
margin_right = 806.0
margin_bottom = 379.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0.561006, 0.652344, 0.55806, 1 )
text = "J.E.F.F."
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Margin", "Rect", "Visibility" ]

[node name="Step2NetWait" type="Label" parent="Step2" index="2"]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 328.0
margin_top = 324.0
margin_right = 797.0
margin_bottom = 606.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 11 )
text = "Waiting for network connection . . ."
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script = ExtResource( 12 )
_sections_unfolded = [ "custom_fonts" ]

[node name="Timer" type="Timer" parent="Step2/Step2NetWait" index="0"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="Step2FileChecker" type="Timer" parent="Step2" index="3"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="Step3" type="Node2D" parent="." index="2"]

editor/display_folded = true
visible = false
script = ExtResource( 13 )

[node name="Step3FileChecker" type="Timer" parent="Step3" index="0"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="CorruptionSpriteTimer" type="Timer" parent="Step3" index="1"]

process_mode = 1
wait_time = 0.3
one_shot = false
autostart = false
script = ExtResource( 14 )

[node name="CorruptionScreen" type="Sprite" parent="Step3" index="2"]

position = Vector2( 511.217, 372.621 )
texture = ExtResource( 15 )
centered = false
script = ExtResource( 16 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="WarningWindow" type="Node2D" parent="Step3" index="3"]

visible = false
z_index = 1
_sections_unfolded = [ "Z Index" ]

[node name="RichTextLabel" type="RichTextLabel" parent="Step3/WarningWindow" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 285.0
margin_top = 166.0
margin_right = 861.0
margin_bottom = 401.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = SubResource( 7 )
bbcode_enabled = false
bbcode_text = "WARNING: NETWORK COMPROMISED

ORIGIN: J-4S CELL

ACCESS KEY: 1234(placeholder)"
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "WARNING: NETWORK COMPROMISED

ORIGIN: J-4S CELL

ACCESS KEY: 1234(placeholder)"
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "BBCode", "Theme" ]

[node name="RebootTimer" type="Timer" parent="Step3" index="4"]

process_mode = 1
wait_time = 0.3
one_shot = false
autostart = false

[node name="Step4" type="Node2D" parent="." index="3"]

editor/display_folded = true
visible = false
script = ExtResource( 17 )

[node name="GreenBackground" type="AnimatedSprite" parent="Step4" index="0"]

z_index = -2
frames = SubResource( 4 )
animation = "default"
script = ExtResource( 9 )
_sections_unfolded = [ "Visibility", "Z Index" ]

[node name="BackgroundAnimPlayer" type="AnimationPlayer" parent="Step4" index="1"]

editor/display_folded = true
root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Fade = SubResource( 8 )
blend_times = [  ]

[node name="Background" type="Sprite" parent="Step4/BackgroundAnimPlayer" index="0"]

visible = false
position = Vector2( 510.296, 387.042 )
z_index = -1
texture = ExtResource( 3 )
script = ExtResource( 4 )
_sections_unfolded = [ "Animation", "Material", "Offset", "Region", "Transform", "Visibility", "Z Index" ]

[node name="J_E_F_FlTimer" type="Timer" parent="Step4" index="2"]

editor/display_folded = true
process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="JeffTitlePlayer" type="AnimationPlayer" parent="Step4/J_E_F_FlTimer" index="0"]

editor/display_folded = true
root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
"anims/Fade In" = SubResource( 9 )
blend_times = [  ]
_sections_unfolded = [ "Playback Options" ]

[node name="J_E_F_F" type="Label" parent="Step4/J_E_F_FlTimer/JeffTitlePlayer" index="0"]

modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 223.0
margin_right = 806.0
margin_bottom = 379.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0.561006, 0.652344, 0.55806, 1 )
text = "J.E.F.F."
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Margin", "Rect", "Visibility", "custom_fonts", "custom_styles" ]

[node name="NotificationLabel" type="Label" parent="Step4" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 479.277
margin_top = 406.881
margin_right = 838.277
margin_bottom = 504.881
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 18 )
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "Visibility", "custom_fonts" ]

[node name="LoginBoxAPlayer" type="AnimationPlayer" parent="Step4" index="4"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Fade = SubResource( 10 )
blend_times = [  ]

[node name="LoginBox" type="Node2D" parent="Step4/LoginBoxAPlayer" index="0"]

visible = false
position = Vector2( 350.277, 290.881 )
z_index = 1
_sections_unfolded = [ "Transform", "Visibility", "Z Index" ]

[node name="Label" type="Label" parent="Step4/LoginBoxAPlayer/LoginBox" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -39.0
margin_top = 30.0
margin_right = 320.0
margin_bottom = 128.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 18 )
text = "Password:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "Visibility", "custom_fonts" ]

[node name="TextEdit" type="TextEdit" parent="Step4/LoginBoxAPlayer/LoginBox" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 117.0
margin_top = 42.0
margin_right = 549.0
margin_bottom = 199.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 19 )
custom_fonts/font = ExtResource( 18 )
text = ""
readonly = false
highlight_current_line = false
syntax_highlighting = false
show_line_numbers = false
highlight_all_occurrences = false
override_selected_font_color = false
context_menu_enabled = false
smooth_scrolling = false
v_scroll_speed = 80.0
hiding_enabled = 0
wrap_lines = false
caret_block_mode = true
caret_blink = true
caret_blink_speed = 0.65
caret_moving_by_right_click = false
script = ExtResource( 20 )
_sections_unfolded = [ "Caret", "Margin", "Theme", "custom_fonts" ]

[node name="Step5" type="Node2D" parent="." index="4"]

visible = false
script = ExtResource( 21 )

[node name="Label" type="Label" parent="Step5" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 80.0
margin_top = 310.0
margin_right = 980.0
margin_bottom = 408.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 18 )
text = "Attention: All facility systems seem to be down or compromised.
Enter sector number for access to Skeleton Key"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "Visibility", "custom_fonts" ]

[node name="NotificationLabel" type="Label" parent="Step5" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 324.0
margin_top = 440.0
margin_right = 682.0
margin_bottom = 538.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 18 )
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "Visibility", "custom_fonts" ]

[node name="TextEdit" type="TextEdit" parent="Step5" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 80.0
margin_top = 420.0
margin_right = 310.0
margin_bottom = 570.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 19 )
custom_fonts/font = ExtResource( 18 )
text = ""
readonly = false
highlight_current_line = false
syntax_highlighting = false
show_line_numbers = false
highlight_all_occurrences = false
override_selected_font_color = false
context_menu_enabled = true
smooth_scrolling = false
v_scroll_speed = 80.0
hiding_enabled = 0
wrap_lines = false
caret_block_mode = true
caret_blink = true
caret_blink_speed = 0.65
caret_moving_by_right_click = true
script = ExtResource( 22 )
_sections_unfolded = [ "Caret", "Theme", "custom_fonts" ]

[node name="VerifyTimer" type="Timer" parent="Step5/TextEdit" index="6"]

process_mode = 1
wait_time = 3.0
one_shot = true
autostart = false

[node name="GreenBackground" type="AnimatedSprite" parent="Step5" index="3"]

z_index = -2
frames = SubResource( 4 )
animation = "default"
script = ExtResource( 9 )
_sections_unfolded = [ "Visibility", "Z Index" ]

[node name="CorruptionTimer" type="Timer" parent="Step5" index="4"]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = false

[node name="Step6" type="Node2D" parent="." index="5"]

[connection signal="timeout" from="Step1/TextEdit/Timer5" to="Step1/TextEdit" method="_on_Timer5_timeout"]

[connection signal="visibility_changed" from="Step2" to="Step2" method="_on_Step2_visibility_changed"]

[connection signal="timeout" from="Step2/Step2J_E_F_FlTimer" to="Step2" method="_on_Step2J_E_F_FlTimer_timeout"]

[connection signal="animation_finished" from="Step2/Step2J_E_F_FlTimer/AnimationPlayer" to="Step2" method="_on_AnimationPlayer_animation_finished"]

[connection signal="timeout" from="Step2/Step2NetWait/Timer" to="Step2/Step2NetWait" method="_on_Timer_timeout"]

[connection signal="timeout" from="Step2/Step2FileChecker" to="Step2" method="_on_Step2FileChecker_timeout"]

[connection signal="visibility_changed" from="Step3" to="Step3" method="_on_Step3_visibility_changed"]

[connection signal="timeout" from="Step3/Step3FileChecker" to="Step3" method="_on_Step3FileChecker_timeout"]

[connection signal="timeout" from="Step3/CorruptionSpriteTimer" to="Step3" method="_on_CorruptionSpriteTimer_timeout"]

[connection signal="visibility_changed" from="Step3/CorruptionScreen" to="Step3/CorruptionScreen" method="_on_CorruptionScreen_visibility_changed"]

[connection signal="timeout" from="Step3/RebootTimer" to="Step3" method="_on_RebootTimer_timeout"]

[connection signal="visibility_changed" from="Step4" to="Step4" method="_on_Step4_visibility_changed"]

[connection signal="timeout" from="Step4/J_E_F_FlTimer" to="Step4" method="_on_J_E_F_FlTimer_timeout"]

[connection signal="animation_finished" from="Step4/J_E_F_FlTimer/JeffTitlePlayer" to="Step4" method="_on_JeffTitlePlayer_animation_finished"]

[connection signal="animation_finished" from="Step4/LoginBoxAPlayer" to="Step4" method="_on_LoginBoxAPlayer_animation_finished"]

[connection signal="visibility_changed" from="Step4/LoginBoxAPlayer/LoginBox" to="Step4/LoginBoxAPlayer/LoginBox/TextEdit" method="_on_LoginBox_visibility_changed"]

[connection signal="visibility_changed" from="Step5" to="Step5/TextEdit" method="_on_Step5_visibility_changed"]

[connection signal="timeout" from="Step5/TextEdit/VerifyTimer" to="Step5" method="_on_VerifyTimer_timeout"]

[connection signal="timeout" from="Step5/CorruptionTimer" to="Step5" method="_on_CorruptionTimer_timeout"]


